--- a/.github/workflows/test-ghdl.yml
+++ b/.github/workflows/test-ghdl.yml
@@ -1,27 +1,29 @@
-name: Test UVVM with GHDL
+name: 'Test UVVM with GHDL'
 
 # TODO add events (push, pull_request, release) and/or schedule as required
 on: [workflow_dispatch]
 
 jobs:
   test-ghdl:
-    name: Test UVVM with GHDL
+    name: 'Test UVVM with GHDL'
     runs-on: windows-2019
     defaults:
       run:
         shell: msys2 {0}
     steps:
-      - uses: actions/checkout@v3
+      - name: 'Checkout'
+        uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - uses: msys2/setup-msys2@v2
+      - name: 'Setup MSYS2-MinGW64'
+        uses: msys2/setup-msys2@v2
         with:
           msystem: mingw32
           update: true
-      - name: Install GHDL
+      - name: 'Install GHDL'
         run: |
           pacman -S --noconfirm mingw-w64-i686-ghdl-mcode
-      - name: Test UVVM with NVC
+      - name: 'Run Tests'
         run: |
           mkdir test && cd test
           sh ../script/compile_all.sh nvc
