--- a/.github/workflows/test-ghdl.yml
+++ b/.github/workflows/test-ghdl.yml
@@ -26,12 +26,12 @@ jobs:
       - name: 'Run Tests'
         run: |
           mkdir test && cd test
-          sh ../script/compile_all.sh nvc
-          sh ../bitvis_irqc/script/compile_all_and_simulate.sh nvc
-          if ! grep -Fxq "Simulation SUCCESS" nvc/_Log.txt ; then
+          sh ../script/compile_all.sh ghdl
+          sh ../bitvis_irqc/script/compile_all_and_simulate.sh ghdl
+          if ! grep -Fxq "Simulation SUCCESS" ghdl/_Log.txt ; then
             exit 1
           fi
-          sh ../bitvis_uart/script/compile_all_and_simulate.sh nvc
-          if ! grep -Fxq "Simulation SUCCESS" nvc/_Log.txt ; then
+          sh ../bitvis_uart/script/compile_all_and_simulate.sh ghdl
+          if ! grep -Fxq "Simulation SUCCESS" ghdl/_Log.txt ; then
             exit 1
           fi
