--- a/.github/workflows/test-ghdl.yml
+++ b/.github/workflows/test-ghdl.yml
@@ -28,7 +28,10 @@ jobs:
           mkdir test && cd test
           sh ../script/compile_all.sh ghdl
           sh ../bitvis_irqc/script/compile_all_and_simulate.sh ghdl
-          if ! grep -Rq "Simulation SUCCESS" ghdl/_Log.txt ; then
+          ls ghdl
+          grep -Rq "Simulation SUCCESS" ghdl/_Log.txt
+          echo $?
+          if ! $? ; then
             exit 1
           fi
           sh ../bitvis_uart/script/compile_all_and_simulate.sh ghdl
