--- a/.github/workflows/test-ghdl.yml
+++ b/.github/workflows/test-ghdl.yml
@@ -28,12 +28,13 @@ jobs:
           mkdir test && cd test
           sh ../script/compile_all.sh ghdl
           sh ../bitvis_irqc/script/compile_all_and_simulate.sh ghdl
-          outcome=$(grep -Rq "Simulation SUCCESS" ghdl/_Log.txt)
-          echo "outcome=$outcome"
-          if [ "$outcome" != "0" ]; then
+          grep -Rq "Simulation SUCCESS" ghdl/_Log.txt
+          if (( $? != 0 )); then
             exit 1
           fi
           sh ../bitvis_uart/script/compile_all_and_simulate.sh ghdl
-          if ! grep -Fxq "Simulation SUCCESS" ghdl/_Log.txt ; then
+          grep -Rq "Simulation SUCCESS" ghdl/_Log.txt
+          if (( $? != 0 )); then
             exit 1
           fi
+
