--- a/.github/workflows/test-nvc.yml
+++ b/.github/workflows/test-nvc.yml
@@ -32,12 +32,12 @@ jobs:
           mkdir test && cd test
           sh ../script/compile_all.sh nvc
           sh ../bitvis_irqc/script/compile_all_and_simulate.sh nvc
-          grep -Rq "Simulation SUCCESS" ghdl/_Log.txt
+          grep -Rq "Simulation SUCCESS" nvc/_Log.txt
           if (( $? != 0 )); then
             exit 1
           fi
           sh ../bitvis_uart/script/compile_all_and_simulate.sh nvc
-          grep -Rq "Simulation SUCCESS" ghdl/_Log.txt
+          grep -Rq "Simulation SUCCESS" nvc/_Log.txt
           if (( $? != 0 )); then
             exit 1
           fi
